fix class wrap changé en wrapper pour éviter conflit boostrap

--- a/css/style.css
+++ b/css/style.css
@@ -41,14 +41,14 @@ body {
   border-radius: 5px;
 }
 
-.wrap {
+.wrapper {
   width: 80%;
   margin: 0 auto;
   padding: 20px;
   background-image: url(../img/dice-658643_1280.png);
 }
 @media (max-width: 450px) {
-  .wrap {
+  .wrapper {
     width: 100%;
     background-image: url(../img/dice-658643_1280.png);
   }
